src/com/perl5/lang/pod/parser/Pod.bnf
{
  parserClass="com.perl5.lang.pod.parser.PodParser"
  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Pod"
  psiImplClassSuffix="Impl"
  psiPackage="com.perl5.lang.pod.psi"
  psiImplPackage="com.perl5.lang.pod.psi.impl"

  elementTypeHolderClass="com.perl5.lang.pod.lexer.PodElementTypes"
  elementTypeClass="com.perl5.lang.pod.PodElementType"
  tokenTypeClass="com.perl5.lang.pod.PodTokenType"

//  psiImplUtilClass="com.perl5.lang.pod.psi.impl.PodPsiImplUtil"

    tokens=[
        POD_NEWLINE
        POD_TAG
        POD_TEXT
        POD_CODE
    ]

}


pod_file ::= pod_paragraph*

private pod_paragraph ::= (control_text | POD_CODE | paragraph) POD_NEWLINE +
private control_text ::= POD_TAG (paragraph | POD_NEWLINE)
paragraph ::= (POD_TEXT POD_NEWLINE) +
